<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加支出"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="629dp" />

    <Button
        android:id="@+id/shouru"
        android:layout_width="82dp"
        android:layout_height="47dp"
        android:text="@string/收入信息"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="677dp" />

    <Button
        android:id="@+id/zhichu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/支出信息"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="676dp" />

    <Button
        android:id="@+id/add2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="629dp" />



</androidx.constraintlayout.widget.ConstraintLayout>